--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ test:
   override:
     - ci/track.sh ci/tests/create-httpd.sh:
         parallel: true
-    - ci/tests/example-app rails-nginx:
+    - ci/track.sh ci/tests/example-app node-example:
         parallel: true
   post:
     - ci/track.sh ci/delete-all-apps.sh:
